Fix styling issues -- make side nav extend to top of footer, and expand padding on global layout so items are not cut off

--- a/styles/components/_global_layout.scss
+++ b/styles/components/_global_layout.scss
@@ -19,7 +19,7 @@ body {
   display: flex;
   flex-wrap: nowrap;
   flex-grow: 1;
-  margin-bottom: $footer-height;
+  padding-bottom: $footer-height * 2.5;
 
   .global-panel-container {
     margin: $gap;
