--- a/styles/components/_global_navigation.scss
+++ b/styles/components/_global_navigation.scss
@@ -1,5 +1,6 @@
 .global-navigation {
   background-color: $color-white;
+  height: auto;
 
   .sidenav__link {
     padding-right: $gap * 2;
